fixed bug of not showing the first video in the array

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,7 +17,10 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
   color: black;
 }
 
-.contain{
+// .jumbotron {
+//
+// }
+.welcome-contain{
   background-color: rgb(33,	121,	79);
 
   nav{
